# os

./: .clippy.toml  .gitignore  .rustfmt.toml  AUDIT_COMPLETE_SUMMARY.md  COMPILE_ERROR_FIX_PLAN.md  COMPREHENSIVE_REVIEW_FINAL_REPORT.md  COMPREHENSIVE_REVIEW_IMPLEMENTATION_PLAN.md  Cargo.toml  EXECUTION_CHECKLIST.md  IMPLEMENTATION_TODOLIST.md  NOS-Complete-Implementation-Plan.md  NOS_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  NOS_IMPLEMENTATION_PLAN.md  NOS_OPTIMIZATION_SUMMARY_REPORT.md  OPTIMIZATION_FRAMEWORK.md  OPTIMIZATION_PROGRESS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_SUMMARY.md  PHASE1_QUICK_REFERENCE.md  PROJECT_STATUS.md  QUICK_START_GUIDE.md  README.md  README_REVIEW_DOCS.md  REVIEW_EXECUTION_SUMMARY.md  TEST_IMPROVEMENT_PLAN.md  build_errors.txt  build_rs_cov.profraw  compilation_errors.txt  current_errors.txt  error_codes.txt  error_patterns.txt  fix_syscalls.sh  fix_types.sh  implementation_plan.md  improvement_report.md  memfd_test_simple  memfd_test_simple.rs  process_tests.d  rustfmt.toml  tarpaulin.toml
benchmarks/microbench/: Cargo.toml
benchmarks/microbench/benches/: buffer_cache_bench.rs  copy_bench.rs  join_path_bench.rs  mmap_bench.rs  prefetch_bench.rs  scheduler_bench.rs  syscall_cache_bench.rs
bootloader/: Cargo.toml  README.md  build.rs
bootloader/.cargo/: config
bootloader/docs/: API_DOCUMENTATION.md  ERROR_RECOVERY_MECHANISM.md  INLINE_COMMENTS.md  MODULE_DOCUMENTATION.md  README.md  USER_GUIDE.md
bootloader/examples/: bios_usage.rs  p0_phase2_integration.rs
bootloader/linker/: aarch64.ld  aarch64_uefi.ld  bios.ld  generic.ld  multiboot2-x86_64.ld  riscv64.ld  riscv64_uefi.ld  x86_64.ld  x86_64_bios.ld  x86_64_uefi.ld
bootloader/src/: error.rs  lib.rs  main.rs
bootloader/src/aarch64/: boot.rs  cpu.rs  memory.rs  mmu.rs  mod.rs
bootloader/src/acpi_support/: acpi_parser.rs  mod.rs  parser.rs  power.rs
bootloader/src/application/: boot_orchestrator.rs  mod.rs
bootloader/src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
bootloader/src/bios/: bios_calls.rs  bios_int_executor.rs  bios_realmode.rs  boot.rs  calls.rs  disk.rs  e820.rs  e820_detection.rs  executor.rs  memory.rs  mod.rs  realmode.rs  vga.rs
bootloader/src/boot_menu/: bios.rs  mod.rs
bootloader/src/boot_stage/: advanced_boot_protocol.rs  boot_checklist.rs  boot_config.rs  boot_control.rs  boot_coordinator.rs  boot_diagnostic.rs  boot_diagnostics.rs  boot_executor.rs  boot_finalization.rs  boot_flow.rs  boot_flow_manager.rs  boot_handoff.rs  boot_integration_tests.rs  boot_loader.rs  boot_loader_integration.rs  boot_manager.rs  boot_menu.rs  boot_params.rs  boot_preparation.rs  boot_recovery.rs  boot_result.rs  boot_security.rs  boot_stack.rs  boot_summary.rs  boot_validation.rs  fallback_boot.rs  mod.rs  preparation.rs
bootloader/src/core/: allocator.rs  allocator_integration.rs  arch_aarch64.rs  arch_riscv64.rs  arch_x86_64.rs  boot_sequence.rs  boot_state.rs  deferred_init.rs  init.rs  mod.rs  version.rs
bootloader/src/cpu_init/: acpi_power_domains.rs  dvfs_scaling.rs  exception_handler.rs  hw_init.rs  hypervisor_init.rs  (+14 more)
bootloader/tests/: architecture_validation.rs  bios_tests.rs  graphics_integration.rs  integration_tests.rs  p0_phase2_modules.rs  p0_phase3_integration.rs
kernel/: Cargo.toml  PROJECT_SUMMARY.md  README.md  RESTRUCTURE_PLAN.md  build.rs  linker-aarch64.ld  linker-riscv64.ld  linker-x86_64.ld  start-aarch64.S  start-riscv64.S  start-x86_64.S
kernel/benches/: comprehensive_benchmarks.rs  kernel_benchmarks.rs  linux_comparison_bench.rs  lockfree_benches.rs  mod.rs  performance_benchmarks.rs  process_management_bench.rs  syscall_benchmarks.rs
kernel/src/: alloc.rs  buddy.rs  console.rs  cpu.rs  drivers.rs  elf.rs  enhanced_tests.rs  epoll.rs  errno.rs  exec.rs  file.rs  fs.rs  fuzz_testing.rs  fuzz_testing_main.rs  gic.rs  gicv3.rs  kernel_factory.rs  lib.rs  log.rs  main.rs  memory_optimized.rs  memory_unified.rs  mm.rs  pipe.rs  posix.rs  process.rs  services_unified.rs  signal.rs  slab.rs  sync.rs  syscall.rs  syscall_impl.rs  syscall_interface.rs  syscalls.rs  test_macros.rs  test_reporting.rs  tests.rs  time.rs  trap.rs  uart.rs  (+2 more)
kernel/tests/: common.rs  comprehensive_core_tests.rs  error_handling_tests.rs  fast_path_tests.rs  fs_syscall_tests.rs  integration_basic.rs  memory_pool_tests.rs  network_socket_tests.rs  permission_tests.rs  process_tests.rs  service_lifecycle_tests.rs  stress_stability_tests.rs  syscall_tests.rs  thread_syscall_tests.rs
nos-api/: Cargo.toml
nos-api/benches/: api_benchmarks.rs
nos-api/src/: boot.rs  collections.rs  fmt_utils.rs  lib.rs  perf.rs  service_lifecycle.rs  sync.rs
nos-api/tests/: api_tests.rs
nos-error-handling/: Cargo.toml
nos-error-handling/src/: kernel_integration.rs  lib.rs
nos-error-handling/tests/: error_handling_tests.rs
nos-memory-management/: Cargo.toml
nos-memory-management/benches/: mm_benchmarks.rs
nos-memory-management/src/: layout.rs  lib.rs  mapping.rs  page_table.rs  physical.rs  virtual_mem.rs  vm.rs
nos-memory-management/tests/: mm_tests.rs
nos-services/: Cargo.toml
nos-services/src/: lib.rs
nos-services/tests/: service_tests.rs
nos-syscalls/: Cargo.toml
nos-syscalls/src/: adaptive_scheduler.rs  advanced_mmap.rs  async_ops.rs  epoll.rs  lib.rs  logging.rs  modular_framework.rs  optimized_syscall_path.rs  performance_monitor.rs  testing_framework.rs  types.rs  zero_copy_network.rs  zero_copy_network_impl.rs
nos-syscalls/tests/: syscall_tests.rs
tests/: Cargo.toml  lib.rs  main.rs
tests/common/: mod.rs
tests/compatibility/: core_tests.rs  mod.rs
tests/integration/: mod.rs
tests/unit/: common.rs  comprehensive_core_tests.rs  error_handling_tests.rs  fast_path_tests.rs  fs_syscall_tests.rs  integration_basic.rs  memory_pool_tests.rs  mod.rs  network_socket_tests.rs  permission_tests.rs  process_tests.rs  service_lifecycle_tests.rs  stress_stability_tests.rs  syscall_tests.rs  thread_syscall_tests.rs
user/: Cargo.toml  build.rs  linker-aarch64.ld  linker-riscv64.ld  linker-x86_64.ld
user/src/: hello_c.c  lib.rs  posix.rs  time.rs
(+1516 files in other folders)
