[workspace]
members = ["kernel", "xtask", "user", "benchmarks/microbench", "bootloader", "nos-memory-management", "nos-api", "nos-syscalls", "nos-services", "nos-error-handling", "tools"]
default-members = ["kernel", "xtask"]
resolver = "2"

# Workspace dependencies - ensure consistent versions across crates
[workspace.dependencies]
# Core dependencies
nos-api = { path = "./nos-api", default-features = false }
nos-memory-management = { path = "./nos-memory-management", default-features = false }
nos-syscalls = { path = "./nos-syscalls", default-features = false }
nos-services = { path = "./nos-services", default-features = false }
nos-error-handling = { path = "./nos-error-handling", default-features = false }

# External dependencies
hashbrown = "0.16.1"
spin = "0.10.0"
log = { version = "0.4" }
bitflags = "2.4"
static_assertions = "1.1"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
libm = "0.2"

# Test dependencies
criterion = { version = "0.8" }
proptest = "1.9"
mockall = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
