[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
static_mut_refs = "allow"

[dependencies]
hashbrown = { version = "0.16", default-features = false }
heapless = "0.9"
spin = "0.10"
libm = "0.2"
bincode = "2.0"
bitflags = "2.10"

# Test dependencies
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.9"
mockall = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

[features]
baremetal = []
kernel_tests = []
link_phys_end = []
fast_syscall = []
zero_copy = []
batch_syscalls = []
net_opt = []
sched_opt = []
lazy_init = []
security_audit = []
formal_verification = []
observability = []
debug_subsystems = []
cloud_native = []

# Features说明：
# baremetal: 裸机启动与汇编路径（global_asm/trap/context switch等），用于真实目标板或无操作系统环境
# kernel_tests: 开启内核自测入口与测试用例（run_tests/test_*），默认关闭以避免宿主编译干扰

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Test profile for running tests
[profile.test]
panic = "abort"
opt-level = 1
debug = true
overflow-checks = true

# Benchmark profile
[profile.bench]
panic = "abort"
opt-level = 3
debug = false
lto = true

# Benchmark configuration
[[bench]]
name = "kernel_benchmarks"
harness = false
required-features = ["kernel_tests"]

[[bench]]
name = "process_management_bench"
harness = false
required-features = ["kernel_tests"]

[[bench]]
name = "comprehensive_benchmarks"
harness = false
required-features = ["kernel_tests"]

[[bench]]
name = "linux_comparison_bench"
harness = false
required-features = ["kernel_tests"]

[[bench]]
name = "syscall_optimization_bench"
path = "benches/syscall_optimization_bench.rs"
harness = false
required-features = ["kernel_tests"]

# Fuzz testing configuration
[[bin]]
name = "fuzz_testing"
path = "src/fuzz_testing_main.rs"
required-features = ["kernel_tests"]
