[package]
name = "nos-api"
version = "0.1.0"
edition = "2024"
authors = ["NOS Developers"]
description = "NOS API - Core interfaces and types for the NOS operating system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nos/nos-api"
keywords = ["nos", "api", "kernel", "os"]
categories = ["os", "no-std"]

[dependencies]
# Core dependencies
bitflags = { workspace = true }
spin = { workspace = true }
lazy_static = { workspace = true }

# Optional dependencies
log = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }

# Collections for no_std
hashbrown = { workspace = true }

# Dependencies from nos-perf
static_assertions = { workspace = true }

[features]
default = []
std = []
log = ["dep:log"]
debug_subsystems = []
formal_verification = []
security_audit = []

# Feature flags for conditional compilation
minimal = []
embedded = []
server = ["log"]
desktop = ["log"]

# Additional feature combinations
full = ["log", "debug_subsystems"]
debug = ["log", "debug_subsystems"]
release = []

# Feature documentation:
# std          - Enable standard library support for testing and development
# log          - Enable logging using the log crate
# debug_subsystems - Enable debug subsystems for development
# formal_verification - Enable formal verification annotations
# security_audit - Enable security audit annotations
# minimal      - Minimal build without optional features
# embedded     - Optimized for embedded systems
# server       - Server configuration with logging
# desktop      - Desktop configuration with logging
# full         - Full configuration with logging and debug features
# debug        - Debug configuration with logging and debug subsystems
# release      - Release configuration without optional features

[lib]
name = "nos_api"
path = "src/lib.rs"

[[bench]]
name = "api_benchmarks"
harness = false

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"