[package]
name = "nos-error-handling"
version = "0.1.0"
edition = "2024"
authors = ["NOS Developers"]
description = "NOS Error Handling - Comprehensive error handling and recovery framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nos/nos-error-handling"
keywords = ["nos", "error-handling", "kernel", "os"]
categories = ["os", "no-std"]

[dependencies]
# Core dependencies
nos-api = { workspace = true, default-features = false, features = ["alloc"] }

# External dependencies
hashbrown = { workspace = true }
spin = { workspace = true }
log = { workspace = true, optional = true }

[features]
default = []
std = []
alloc = []
log = ["dep:log"]
debug_subsystems = []
formal_verification = []
security_audit = []

# Feature flags for conditional compilation
minimal = []
embedded = ["alloc"]
server = ["alloc", "log"]
desktop = ["alloc", "log"]

[lib]
name = "nos_error_handling"
path = "src/lib.rs"



[[test]]
name = "error_handling_tests"
path = "tests/error_handling_tests.rs"