[package]
name = "nos-services"
version = "0.1.0"
edition = "2024"
authors = ["NOS Developers"]
description = "NOS Services - Service management and discovery framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nos/nos-services"
keywords = ["nos", "services", "kernel", "os"]
categories = ["os", "no-std"]

[dependencies]
# Core dependencies
nos-api = { workspace = true, default-features = false }

# External dependencies
hashbrown = { workspace = true }
spin = { workspace = true }
log = { workspace = true, optional = true }

[features]
default = []
std = []
alloc = []
log = ["dep:log"]
debug_subsystems = []
formal_verification = []
security_audit = []

# Feature flags for conditional compilation
minimal = []
embedded = ["alloc"]
server = ["alloc", "log"]
desktop = ["alloc", "log"]

[lib]
name = "nos_services"
path = "src/lib.rs"



[[test]]
name = "service_tests"
path = "tests/service_tests.rs"