[package]
name = "nos-tests"
version = "0.1.0"
edition = "2024"
authors = ["NOS Developers"]
description = "NOS Test Suite - Unified testing framework for NOS operating system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nos/nos-tests"
keywords = ["nos", "test", "os"]
categories = ["os", "development-tools::testing"]

[dependencies]
# Core dependencies
kernel = { path = "../kernel", default-features = false }
nos-api = { workspace = true, default-features = false }
nos-memory-management = { workspace = true, default-features = false, optional = true }
nos-syscalls = { workspace = true, default-features = false, optional = true }
nos-services = { workspace = true, default-features = false, optional = true }
nos-error-handling = { workspace = true, default-features = false, optional = true }

# External dependencies
hashbrown = { workspace = true }
spin = { workspace = true }
log = { workspace = true, optional = true }

[features]
default = ["alloc"]
std = []
alloc = []
log = ["dep:log"]
debug_subsystems = []
formal_verification = []
security_audit = []

# Feature flags for conditional compilation
minimal = []
embedded = ["alloc"]
server = ["alloc", "log"]
desktop = ["alloc", "log"]

[lib]
name = "nos_tests"
path = "lib.rs"

[[bin]]
name = "nos-tests"
path = "main.rs"