[package]
name = "microbench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "join_path_bench"
harness = false

[[bench]]
name = "copy_bench"
harness = false

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "mmap_bench"
harness = false

